micronaut-bank/backend/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service #corrigi aqui
  labels:
    app: app
    service: app
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
      nodePort: 30007
  selector:
    app: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /prometheus
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: app
      containers:
        - name: app
          image: cezarcruz/micro-bank:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "600m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
