micronaut-bank/backend/k8s/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
      - uri:
          exact: /metrics
      rewrite:
        uri: /prometheus
      route:
        - destination:
            host: app-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-service #destino é aqui?
            port:
              number: 8080
